--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+@(semanas: List[Semana])
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -8,11 +8,15 @@
 		<title>Organize suas metas semanais</title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/coracao.png")">	
+		
 		<!-- Bootstrap CSS -->
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+		
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/styles.css")">
 		
 		<script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
@@ -68,44 +72,209 @@
       	<hr>
       
 		<div class="row">
-           
-            
-          
+		
             <!-- center left-->	
          	<div class="col-md-6">
-			  <div class="well" id="semana1">Semana 1</div>
-			  <div class="well" id="semana2">Semana 2</div>
-			  <div class="well" id="semana3">Semana 3</div>
-			  <div class="well" id="semana4">Semana 4</div>
-			  <div class="well" id="semana5">Semana 5</div>
-			  <div class="well" id="semana6">Semana 6</div>
+			  <div class="well" id="semana1">
+			  	<h4>Semana 1</h4>
+			  	 @if(!semanas.isEmpty() && semanas.get(0).isEmpty()){
+				        Nenhuma meta foi cadastrada.
+				    }else{
+				    	<table id= "tarefasSemana1">
+				    	<tr><th colspan="2"><div align="center">Total: @semanas.get(0).numeroDeMetasNaSemana()</div></th></tr>
+				    	<tbody>
+					    @if(!semanas.isEmpty() && !semanas.get(0).isEmpty()){
+					        
+					            @for(meta <- semanas.get(0).getMetas()){
+									<tr>
+										<td>
+											Nome: @meta.getNome()<br>
+											Descrição: @meta.getDescricao()<br>
+											Prioridade: @meta.getPrioridade()
+										</td>
+										<td><div align="center"><buttonDelete class="btn btn-danger buttonDelete" id=@meta.getId()>Deletar</button></div></td>
+									</tr>
+								}				        
+					    }
+					    </tbody>
+					    </table>
+					    
+				    }
+			  
+			  </div>
+			  
+			  <div class="well" id="semana2">
+			  	<h4>Semana 2</h4>
+			  	 @if(!semanas.isEmpty() && semanas.get(1).isEmpty()){
+				        Nenhuma meta foi cadastrada.
+				    }else{
+				    	<table id= "tarefasSemana1">
+				    	<tr><th colspan="2"><div align="center">Total: @semanas.get(1).numeroDeMetasNaSemana()</div></th></tr>
+				    	<tbody>
+					    @if(!semanas.isEmpty() && !semanas.get(1).isEmpty()){
+					        
+					            @for(meta <- semanas.get(1).getMetas()){
+									<tr>
+										<td>
+											Nome: @meta.getNome()<br>
+											Descrição: @meta.getDescricao()<br>
+											Prioridade: @meta.getPrioridade()
+										</td>
+										<td><div align="center"><button class="btn btn-danger buttonDelete" id=@meta.getId()>Deletar</button></div></td>
+									</tr>
+								}				        
+					    }
+					    </tbody>
+					    </table>
+					    
+				    }	
+			  </div>
+			  <div class="well" id="semana3">
+			  	<h4>Semana 3</h4>
+			  	 @if(!semanas.isEmpty() && semanas.get(2).isEmpty()){
+				        Nenhuma meta foi cadastrada.
+				    }else{
+				    	<table id= "tarefasSemana1">
+				    	<tr><th colspan="2"><div align="center">Total: @semanas.get(2).numeroDeMetasNaSemana()</div></th></tr>
+				    	<tbody>
+					    @if(!semanas.isEmpty() && !semanas.get(2).isEmpty()){
+					        
+					            @for(meta <- semanas.get(2).getMetas()){
+									<tr>
+										<td>
+											Nome: @meta.getNome()<br>
+											Descrição: @meta.getDescricao()<br>
+											Prioridade: @meta.getPrioridade()
+										</td>
+										<td><div align="center"><button class="btn btn-danger buttonDelete" id=@meta.getId()>Deletar</button></div></td>
+									</tr>
+								}				        
+					    }
+					    </tbody>
+					    </table>
+					    
+				    }
+			  </div>
+			  <div class="well" id="semana4">
+			  	<h4>Semana 4</h4>
+			  	 @if(!semanas.isEmpty() && semanas.get(3).isEmpty()){
+				        Nenhuma meta foi cadastrada.
+				    }else{
+				    	<table id= "tarefasSemana1">
+				    	<tr><th colspan="2"><div align="center">Total: @semanas.get(3).numeroDeMetasNaSemana()</div></th></tr>
+				    	<tbody>
+					    @if(!semanas.isEmpty() && !semanas.get(3).isEmpty()){
+					        
+					            @for(meta <- semanas.get(3).getMetas()){
+									<tr>
+										<td>
+											Nome: @meta.getNome()<br>
+											Descrição: @meta.getDescricao()<br>
+											Prioridade: @meta.getPrioridade()
+										</td>
+										<td><div align="center"><button class="btn btn-danger buttonDelete" id=@meta.getId()>Deletar</button></div></td>
+									</tr>
+								}				        
+					    }
+					    </tbody>
+					    </table>
+					    
+				    }	
+			  </div>
+			  <div class="well" id="semana5">
+			  	<h4>Semana 5</h4>
+			  	 @if(!semanas.isEmpty() && semanas.get(4).isEmpty()){
+				        Nenhuma meta foi cadastrada.
+				    }else{
+				    	<table id= "tarefasSemana1">
+				    	<tr><th colspan="2"><div align="center">Total: @semanas.get(4).numeroDeMetasNaSemana()</div></th></tr>
+				    	<tbody>
+					    @if(!semanas.isEmpty() && !semanas.get(4).isEmpty()){
+					        
+					            @for(meta <- semanas.get(4).getMetas()){
+									<tr>
+										<td>
+											Nome: @meta.getNome()<br>
+											Descrição: @meta.getDescricao()<br>
+											Prioridade: @meta.getPrioridade()
+										</td>
+										<td><div align="center"><button class="btn btn-danger buttonDelete" id=@meta.getId()>Deletar</button></div></td>
+									</tr>
+								}				        
+					    }
+					    </tbody>
+					    </table>
+					    
+				    }	
+			  </div>
+			  <div class="well" id="semana6">
+			  	<h4>Semana 6</h4>
+			  	 @if(!semanas.isEmpty() && semanas.get(5).isEmpty()){
+				        Nenhuma meta foi cadastrada.
+				    }else{
+				    	<table id= "tarefasSemana1">
+				    	<tr><th colspan="2"><div align="center">Total: @semanas.get(5).numeroDeMetasNaSemana()</div></th></tr>
+				    	<tbody>
+					    @if(!semanas.isEmpty() && !semanas.get(5).isEmpty()){
+					        
+					            @for(meta <- semanas.get(5).getMetas()){
+									<tr>
+										<td>
+											Nome: @meta.getNome()<br>
+											Descrição: @meta.getDescricao()<br>
+											Prioridade: @meta.getPrioridade()
+										</td>
+										<td><div align="center"><button class="btn btn-danger buttonDelete" id=@meta.getId()>Deletar</button></div></td>
+									</tr>
+								}				        
+					    }
+					    </tbody>
+					    </table>
+					    
+				    }	
+			  </div>
               
               
    
           	</div><!--/col-->
         	<div class="col-md-6">
 				<div class="well"> 
-					<form class="form">
+					<form class="form" method="POST" action="/criarMeta">
 						<h4>Nova Meta</h4>
 						<div>
 							<label>Nome</label>
-							<input type="text" class="form-control input-lg" title="Dê um nome à sua meta." placeholder="Digite o nome da meta"/>
+							<input type="text" name="nome" class="form-control input-lg" title="Dê um nome à sua meta." placeholder="Digite o nome da meta" required/>
 						</div>						
 						<div>
 							<label>Descrição</label>
-							<input type="text" class="form-control input-lg" title="Descreva sua meta." placeholder="Digite uma descrição"/>
+							<input type="text" name="descricao" class="form-control input-lg" title="Descreva sua meta." placeholder="Digite uma descrição"/>
 						</div>
 						<div>
 							<label>Prioridade</label>
-							<input type="number" class="form-control input-lg" title="Qual a prioridade?." placeholder="Qual a importância da meta?"/>
+							<select class="form-control" name="prioridade">
+							  <option>1</option>
+							  <option>2</option>
+							  <option>3</option>
+							  <option>4</option>
+							  <option>5</option>
+						    </select>
 						</div>
 						<div>
 							<label>Semana</label>
-							<input type="number" class="form-control input-lg" title="Semana da meta." placeholder="Semana que alcançará a meta"/>
+							<select class="form-control" name="semana">
+							  <option>Semana 1</option>
+							  <option>Semana 2</option>
+							  <option>Semana 3</option>
+							  <option>Semana 4</option>
+							  <option>Semana 5</option>
+							  <option>Semana 6</option>
+						    </select>
+						
+						
 						</div>
 						<hr></hr>
 						<div align="center">
-							<input type="submit" class="btn btn-success" value="Criar Meta"/>
+							<input type="submit" class="btn btn-success" value="Criar Meta" />
 						</div>
 					</form>
 				</div><!--/well-->
@@ -121,5 +290,7 @@
     <script src="http://code.jquery.com/jquery.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+
+	<script src="@routes.Assets.at("javascripts/dinamic.js")" type="text/javascript"></script>
 	</body>
 </html>
