--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/coracao.png")">
         <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/dinamic.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
