--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,10 @@
-.conteudo{
-	background-color: red;
+table{
+	width:100%;
+	word-break: break-all;
+}
+
+table, th, td{
+	border-style: groove;
+	text-align: left;
+	font-family: inherit;
 }
