--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,3 +13,11 @@ table, th, td{
 	width: 36px;
 	height: 35px;
 }
+
+table tbody tr.true td{
+	background-color: rgb(182, 189, 194);
+}
+
+.tdCheck{
+	text-align:center;
+}
